fix Small Screens
updated css to not let elements scroll off screen if the window is too small

--- a/css/main.css
+++ b/css/main.css
@@ -23,3 +23,18 @@ table, th, td {
 .hide {
     visibility: hidden;
 }
+
+/*
+* Responsive Layouts
+*/
+
+@media screen and (max-width: 800px){
+    
+    body {
+        width: 90%;
+    }
+
+    * {
+        max-width: 100%;
+    }
+}
